--- a/fitur.html
+++ b/fitur.html
@@ -36,7 +36,8 @@
     // Fungsi cek kelulusan
     const siswaData = [
       { nisn: "1234567890", nama: "Ahmad Zaki", lulus: true },
-      { nisn: "0987654321", nama: "Dina Safira", lulus: false }
+      { nisn: "0987654321", nama: "Dina Safira", lulus: false },
+      { nisn: "1122334455", nama: "Dani", lulus: false }
     ];
 
     function cekKelulusan() {
@@ -250,7 +251,7 @@
 
     <div id="inputSection">
       <input id="nisnInput" type="text" placeholder="Masukkan NISN Anda" />
-      <button onclick="validateNSN()">Cek Kelulusan & Download SKL</button>
+      <button onclick="validateNSN()">Cek Kelulusan</button>
     </div>
 
     <div class="emoji" id="statusEmoji">🎉</div>
