--- a/fitur.html
+++ b/fitur.html
@@ -37,7 +37,7 @@
     const siswaData = [
       { nisn: "1234567890", nama: "Ahmad Zaki", lulus: true },
       { nisn: "0987654321", nama: "Dina Safira", lulus: false },
-      { nisn: "1122334455", nama: "Dani", lulus: false }
+      { nisn: "1122334455", nama: "Dani", lulus: true }
     ];
 
     function cekKelulusan() {
