--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ const sklFiles = {
     "0092950622": "0092950622.pdf",
     "0099140554": "0099140554.pdf",
     "0106311286": "0106311286.pdf",
-    "0102845363": "0102845363.pdf"
+    "0102845363": "0102845363.pdf",
+    "0107245745": "0107245745.pdf"
 };
     // Fungsi untuk memvalidasi NISN dan menampilkan tombol download SKL
     function validateNSN() {
