--- a/index.html
+++ b/index.html
@@ -132,10 +132,109 @@ const sklFiles = {
 
     // Fungsi cek kelulusan
     const siswaData = [
-      { nisn: "1234567890", nama: "Ahmad Zaki", lulus: true },
-      { nisn: "0987654321", nama: "Dina Safira", lulus: false },
-      { nisn: "1122334455", nama: "Dani", lulus: true }
-    ];
+  { nisn: "0099230110", nama: "AINUN A. BANGGAULU", lulus: true },
+  { nisn: "0104076633", nama: "Akmal", lulus: true },
+  { nisn: "0101212974", nama: "APRIANSYAH R. SENEN", lulus: true },
+  { nisn: "0107245745", nama: "AZZAHRA MAGRIFA GAMA", lulus: true },
+  { nisn: "0103776386", nama: "Azzahra Umala", lulus: true },
+  { nisn: "0104441266", nama: "Fardan M. Daomi", lulus: true },
+  { nisn: "0104853864", nama: "Ferdiansyah Dede", lulus: true },
+  { nisn: "0099088883", nama: "MAGFIRA SALUNGA", lulus: true },
+  { nisn: "0104565300", nama: "MARSYA PRATIWI", lulus: true },
+  { nisn: "0106574765", nama: "Marwia", lulus: true },
+  { nisn: "0107571584", nama: "MOH. AMIN", lulus: true },
+  { nisn: "0105961598", nama: "MOH. FARIL", lulus: true },
+  { nisn: "0106497100", nama: "MOH. RAFLI R. PARLASI", lulus: true },
+  { nisn: "0094625453", nama: "MOH.FALLEN TIO BALASAN", lulus: true },
+  { nisn: "0103834946", nama: "MOH.RIZKI MANGILO", lulus: true },
+  { nisn: "0091386868", nama: "MUHAMMAD ALI", lulus: true },
+  { nisn: "0093173103", nama: "MUHAMMAD LUTFI SYAH AR. THAYIB", lulus: true },
+  { nisn: "0108738902", nama: "Nur'ain Khaerunnisa", lulus: true },
+  { nisn: "0093584660", nama: "Nur Rahmi", lulus: true },
+  { nisn: "0093047826", nama: "Nurhalisa D", lulus: true },
+  { nisn: "0093388199", nama: "Rafiq Sholehudin", lulus: true },
+  { nisn: "0108194256", nama: "Raflan U. Usman", lulus: true },
+  { nisn: "0107975231", nama: "Siti Rahma M", lulus: true },
+  { nisn: "0102279183", nama: "SRI RAHAYU M. KAIDONG", lulus: true },
+  { nisn: "0103325365", nama: "Yuniarti H. Makkasau", lulus: true },
+  { nisn: "0098767200", nama: "A'AN SAMAD", lulus: false },
+  { nisn: "0091158385", nama: "AHMAD DANI NIBI", lulus: true },
+  { nisn: "0104466195", nama: "AIRIN SEFTIANI", lulus: true },
+  { nisn: "0095997516", nama: "Arfan K. Mumbu", lulus: true },
+  { nisn: "0096478013", nama: "Delvi Fitriani Tamaranda", lulus: true },
+  { nisn: "0093864559", nama: "FAJRULLAH U. TAMBARU", lulus: true },
+  { nisn: "0103303863", nama: "ISMA RUSUENDE", lulus: true },
+  { nisn: "0102042637", nama: "Moh. Nur Alamsyah", lulus: true },
+  { nisn: "0095966735", nama: "Moh. Ridwan Djafar", lulus: true },
+  { nisn: "0108196044", nama: "Mohammad Fahri Akase", lulus: false },
+  { nisn: "0084937462", nama: "NABILA RAHMATIA B", lulus: true },
+  { nisn: "0101668062", nama: "Nur Zahra G. Barubi", lulus: true },
+  { nisn: "0107162808", nama: "NURMAWADA PAJULANGI", lulus: true },
+  { nisn: "0097590273", nama: "NURUL AINATUL AINI", lulus: true },
+  { nisn: "0092949752", nama: "Rafli A. Lamaniu", lulus: true },
+  { nisn: "0091933418", nama: "RAHMAD S. GUNDU", lulus: true },
+  { nisn: "0101692395", nama: "RAMADHAN A.LENTO", lulus: true },
+  { nisn: "0107895062", nama: "Salim Lapangandong", lulus: true },
+  { nisn: "0106720162", nama: "Samsudin M. Parancoga", lulus: true },
+  { nisn: "0095098666", nama: "SITI NUR HAJYA", lulus: true },
+  { nisn: "0102154717", nama: "SITI RAMLAH", lulus: true },
+  { nisn: "0109240589", nama: "SRI RAHAYU K. ROMA", lulus: true },
+  { nisn: "0083780615", nama: "SUCI RAMADANI SUPU", lulus: false },
+  { nisn: "0109170614", nama: "SYAIFAT ISMAIL", lulus: true },
+  { nisn: "0109711301", nama: "ULFIA UMMAIRA T.DAIYA", lulus: true },
+  { nisn: "0105649817", nama: "Zulfiani H. Lamadjido", lulus: true },
+  { nisn: "0103764146", nama: "Zulvikar H. Dali", lulus: true },
+  { nisn: "0107986089", nama: "Adelia Andini Fariadi", lulus: true },
+  { nisn: "0095555535", nama: "Cahyu Fitri Rezky", lulus: true },
+  { nisn: "0092188314", nama: "DELFI AMELIA A. NUSI", lulus: true },
+  { nisn: "0102466338", nama: "Fadlia Febriani Paputungan", lulus: true },
+  { nisn: "0094837848", nama: "FAHRI M. YOMPU", lulus: true },
+  { nisn: "0101924918", nama: "Fiyatum F. Tampo", lulus: true },
+  { nisn: "0105561287", nama: "Ian Syah Emeraldi Putra", lulus: true },
+  { nisn: "0108034770", nama: "KHALISA AYU ROSSIANDAYA PALAMPANGA", lulus: true },
+  { nisn: "0104055535", nama: "MOH. AGIF A. SAYA", lulus: true },
+  { nisn: "0094291983", nama: "Moh. April Kunene", lulus: true },
+  { nisn: "0102972929", nama: "Moh. Fadli Taufik", lulus: true },
+  { nisn: "0109967598", nama: "MOH. FAHRIL BALABAKI", lulus: true },
+  { nisn: "0107653524", nama: "MOH. RAFLI H. LAPUNA", lulus: true },
+  { nisn: "3073620416", nama: "MOH. RISKI RAMADHANI", lulus: true },
+  { nisn: "0099240701", nama: "MOH. RIVALDI A. LAROPO", lulus: true },
+  { nisn: "0097697729", nama: "MOH.BADRUN PASEWA", lulus: true },
+  { nisn: "0092692322", nama: "MUAMAR ALIF AKSA", lulus: true },
+  { nisn: "3107191213", nama: "MUH. ADLY SYAPUTRA", lulus: true },
+  { nisn: "0109243888", nama: "MUH.CHAERUL AZZAM", lulus: true },
+  { nisn: "0117156683", nama: "MUHSIN M. LANUNA", lulus: true },
+  { nisn: "0096954289", nama: "Mustamil Maloto", lulus: true },
+  { nisn: "0108903334", nama: "NUR ANISA", lulus: true },
+  { nisn: "0103549181", nama: "Nur Rofika Sari Abd. Djalal", lulus: true },
+  { nisn: "0108168405", nama: "Safriyani E. Lapabero", lulus: true },
+  { nisn: "0103551996", nama: "ZASKIA", lulus: true },
+  { nisn: "0094294347", nama: "Achmad Farrel Lapampi", lulus: true },
+  { nisn: "0106052977", nama: "Aditya Tonti", lulus: true },
+  { nisn: "0091113622", nama: "Arum Saputri", lulus: true },
+  { nisn: "0095679481", nama: "Chaina R. Tjapada", lulus: true },
+  { nisn: "0109407319", nama: "Fitriani Marjun", lulus: true },
+  { nisn: "0109187015", nama: "Ical Talapiu", lulus: true },
+  { nisn: "0099546040", nama: "IRFAN", lulus: true },
+  { nisn: "0097249651", nama: "Kasih Subehi", lulus: true },
+  { nisn: "0096975457", nama: "LATIFA NADIZA", lulus: true },
+  { nisn: "0104480680", nama: "MOH. FEBRIANSYAH", lulus: true },
+  { nisn: "0107806832", nama: "MOH. HUSAIN A. LAPANGANDONG", lulus: true },
+  { nisn: "0093788632", nama: "MOH.RAFLI PATUTE", lulus: true },
+  { nisn: "0105127280", nama: "Muhamad Dirga", lulus: true },
+  { nisn: "0101168163", nama: "Nur Asti A. Rituntina", lulus: true },
+  { nisn: "0102972907", nama: "Nurfa'izah Lapangandong", lulus: true },
+  { nisn: "0091540587", nama: "NURLAILA BARRA", lulus: true },
+  { nisn: "0101042506", nama: "Raditya Darma Yuda", lulus: true },
+  { nisn: "0102310457", nama: "Rahmat Hidayat Tasi", lulus: true },
+  { nisn: "0094171580", nama: "RAHMI OKTAVIANY H. WAHID", lulus: true },
+  { nisn: "0091212906", nama: "Rifal Darise", lulus: false },
+  { nisn: "0092950622", nama: "RIFALDY R. MAESALA", lulus: true },
+  { nisn: "0099140554", nama: "SITI AISYA DG.AMING", lulus: true },
+  { nisn: "0106311286", nama: "SITI NURSAFA", lulus: true },
+  { nisn: "0102845363", nama: "VEBBY ANGGRIYANI PUTRI", lulus: true },
+  { nisn: "0105372830", nama: "MOH. KAMAL Z. BALONGKA", lulus: true }
+];
 
     function cekKelulusan() {
         const nisn = document.getElementById("nisnInput").value.trim();
