--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ const sklFiles = {
 
     <footer>
       © 2025 SMP NEGERI 2 AMPANA KOTA<br>
-      Created by FANDY S. M. DALI
+      Created by Fandy s. m. dali
     </footer>
   </div>
 
